<resources>
    <string name="app_name">WRP</string>
    <string name="world_radio_player">World Radio Player</string>
    <string name="less_than"><![CDATA[<]]></string>
    <string name="play">PLAY</string>
    <string name="pause">PAUSE</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="stop">STOP</string>
    <string name="greater"><![CDATA[>]]></string>
    <string name="all_stations">All Stations</string>
    <string name="help">Help</string>
    <string name="radio_help">On this screen, you can play the radio, save preset stations, and scan stations. We hope you\'ll rotate
        your phone to landscape mode so that the interface looks like the screen of a car radio. \n\nIn order to save a station to
        a preset area, pull up the station you would like to save and then long hold in the preset area you want to save it to.
        \n\nThe single and double arrows are how you switch stations. If you click on the single arrows, the next station will be shown.
        If you click on one of the double arrows the radio will scan in that direction, switching every 5 seconds. It will continue
        scanning until you click another option. \n\nClicking on the globe icon will open a website associated with the station.</string>
    <string name="list_help">This screen shows you all stations in the radio application. If you click on one of the stations, a pop up will
        show up with all the information on that station. You can then click ‘Play’ if you would like that station to begin playing in your radio,
        or click the back button to go back to the list of all stations.</string>
    <string name="loading_help">This is the loading screen. If the radio does not load, please check your internet connection and close the app and open it again.</string>
    <string name="back"><![CDATA[< Back]]></string>
    <string name="uh_oh_no_internet_connectivity_was_detected">Uh Oh! No internet connectivity was detected.</string>
    <string name="loading">Loading</string>
    <string name="loading1">Loading.</string>
    <string name="loading2">Loading..</string>
    <string name="loading3">Loading...</string>
    <string name="no_internet">No Internet Connectivity Detected</string>
    <string name="error1">There was an error retrieving the application data</string>
    <string name="scan_left"><![CDATA[<<]]></string>
    <string name="scan_right"><![CDATA[>>]]></string>
    <string name="purple_calves">Concept by Robert Wiley <u>www.purplecalves.com</u></string>
    <string name="contributions_by">Developed by:</string>
    <string name="Ashley_Douglas_android">Ashley Douglas - Android Development</string>
    <string name="Evan_Baker_database">Evan Baker - Database, Web Development</string>
    <string name="Nolan_Sliger_android">Nolan Sliger - Android Development</string>
    <string name="Alexandria_Southern_front_end">Alexandria Southern - Graphics, Android Development</string>
    <string name="name">Name:</string>
    <string name="country">Country:</string>

</resources>
