<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true">

        <ImageButton
            android:id="@+id/websiteImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            app:srcCompat="@drawable/web_icon"
            android:layout_alignTop="@+id/short_name"
            android:layout_toRightOf="@+id/short_name"
            android:layout_toEndOf="@+id/short_name"
            android:layout_marginTop="6dp" />

        <worldradio.org.worldRadio.utils.RadioTextView
            android:id="@+id/short_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:enabled="true"
            android:textSize="40sp"
            android:textColor="@color/black"
            tools:text="Station Name Placeholder" />


    </RelativeLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/top_row"
        android:layout_marginTop="108dp"
        android:layout_marginBottom="-108dp"
        android:visibility="visible">

        <RelativeLayout
            android:id="@+id/form_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">


            <worldradio.org.worldRadio.utils.RadioTextView
                android:id="@+id/genre"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="97dp"
                android:layout_marginLeft="97dp"
                android:layout_marginTop="55dp"
                android:layout_marginEnd="127dp"
                android:layout_marginRight="127dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="20sp"
                tools:text="Genre Placeholder" />

            <worldradio.org.worldRadio.utils.RadioTextView
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginStart="0dp"
                android:layout_marginLeft="0dp"
                android:layout_marginEnd="0dp"
                android:layout_marginRight="0dp"
                android:gravity="center"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="34sp"
                tools:text="CountryPlaceHolder" />

        </RelativeLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/top_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout3"
        android:orientation="horizontal">

        <worldradio.org.worldRadio.utils.RadioButton
            android:id="@+id/playButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:textColor="@color/black"
            android:text="@string/play" />

        <worldradio.org.worldRadio.utils.RadioButton
            android:id="@+id/stopButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:background="@drawable/button_border"
            android:text="@string/stop" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout3">

        <worldradio.org.worldRadio.utils.RadioButton
            android:id="@+id/previous_scan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/scan_left" />

        <worldradio.org.worldRadio.utils.RadioButton
            android:id="@+id/previous"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:text="@string/less_than" />

        <worldradio.org.worldRadio.utils.RadioButton
            android:id="@+id/next"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:background="@drawable/button_border"
            android:textSize="20sp"
            android:text="@string/greater" />

        <worldradio.org.worldRadio.utils.RadioButton
            android:id="@+id/next_scan"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:textSize="20sp"
            android:text="@string/scan_right" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/linearLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:id="@+id/linearLayout2">

        <worldradio.org.worldRadio.utils.RadioButton
            android:id="@+id/button1"
            android:textColor="@color/black"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:layout_weight="1"
            android:text="@string/_1" />

        <worldradio.org.worldRadio.utils.RadioButton
            android:id="@+id/button2"
            android:textColor="@color/black"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:layout_weight="1"
            android:text="@string/_2" />

        <worldradio.org.worldRadio.utils.RadioButton
            android:id="@+id/button3"
            android:textColor="@color/black"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:layout_weight="1"
            android:text="@string/_3" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:id="@+id/linearLayout">

        <worldradio.org.worldRadio.utils.RadioButton
            android:id="@+id/button4"
            android:textColor="@color/black"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/button_border"
            android:text="@string/_4" />

        <worldradio.org.worldRadio.utils.RadioButton
            android:id="@+id/button5"
            android:textColor="@color/black"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:layout_weight="1"
            android:text="@string/_5" />

        <worldradio.org.worldRadio.utils.RadioButton
            android:id="@+id/button6"
            android:textColor="@color/black"
            android:layout_width="0px"
            android:layout_height="wrap_content"
            android:background="@drawable/button_border"
            android:layout_weight="1"
            android:text="@string/_6" />
    </LinearLayout>


</RelativeLayout>